--- a/SoundTextures_Preprocess_Stephen_David.ipynb
+++ b/SoundTextures_Preprocess_Stephen_David.ipynb
@@ -16,12 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:32:25.535860Z",
+     "start_time": "2024-02-02T18:32:24.995373Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from scipy.io import wavfile\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import IPython  # to play audio\n",
@@ -84,7 +90,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:13:14.751431Z",
+     "start_time": "2024-02-02T18:13:14.715893Z"
+    }
+   },
    "outputs": [],
    "source": [
     "data_path = join(\"soundFiles/2023_Stephen_David_natural_sounds_1sec\")"
@@ -92,17 +103,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:32:30.300227Z",
+     "start_time": "2024-02-02T18:32:30.286728Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "data_files = sorted(glob.glob(os.path.join(data_path,'*.wav')))"
+    "data_files = sorted(glob.glob(os.path.join(data_path,'*.wav')))\n",
+    "\n",
+    "sound_labels = np.array([os.path.splitext(os.path.basename(d))[0] for d in data_files])\n",
+    "labels_frame = pd.DataFrame(sound_labels)\n",
+    "labels_frame.to_csv(os.path.join(dataRootDir, \"soundFiles/labels_Stephen_David.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:13:20.900669Z",
+     "start_time": "2024-02-02T18:13:20.866280Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# example index to use for testing/visualization\n",
@@ -112,14 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:13:23.961059Z",
+     "start_time": "2024-02-02T18:13:23.910536Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "'/Users/Matt/Desktop/Research/Murray/data/PredAudioData/soundFiles/2023_Stephen_David_natural_sounds_1sec/00cat172_rec1_geese_excerpt1.wav'"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,12 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:13:28.937646Z",
+     "start_time": "2024-02-02T18:13:28.217163Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Initialize holder for waveforms\n",
     "sound_data = np.zeros((len(data_files),samplerate))\n",
+    "\n",
+    "# TODO: for each of the file names in data_files, create an array of labels for machine learning training later\n",
     "for n, d in enumerate(data_files):\n",
     "    samplerate, data_temp = wavfile.read(d)\n",
     "    sound_data[n] = data_temp.copy()"
@@ -143,8 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T18:13:34.666272Z",
+     "start_time": "2024-02-02T18:13:34.441949Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -155,9 +197,9 @@
     },
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x135055b10>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x133885e90>"
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
